[gd_scene load_steps=21 format=3 uid="uid://tykc6lvqmkhw"]

[ext_resource type="Script" uid="uid://8peletdargx3" path="res://Scripts/Trolleys/Trolley components/throwable_lever.gd" id="1_hxcdq"]
[ext_resource type="Script" uid="uid://ipgq1xtt6inr" path="res://addons/godot-xr-tools/objects/pickable.gd" id="2_6r5ig"]
[ext_resource type="ArrayMesh" uid="uid://j5427occ3uv7" path="res://Resources/Models/Trolley/control_panel_speed_lever.obj" id="3_ykovv"]
[ext_resource type="Script" uid="uid://bv2d1r7ven1av" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="5_fc0km"]
[ext_resource type="Material" uid="uid://c5w55f1opcxl5" path="res://Resources/Materials/highlight_material_transparent.tres" id="6_odcf6"]
[ext_resource type="Script" uid="uid://0jp0ir4lmpvc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand.gd" id="7_bv76e"]
[ext_resource type="Animation" uid="uid://nq3xh1olqipq" path="res://addons/godot-xr-tools/hands/animations/left/Grip Shaft.res" id="8_38xpb"]
[ext_resource type="Script" uid="uid://45f7hqo2rphl" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="9_ex07i"]
[ext_resource type="Animation" uid="uid://dgfeikrugfewi" path="res://addons/godot-xr-tools/hands/animations/left/Cup.res" id="10_ic72q"]
[ext_resource type="Animation" uid="uid://c8dghcftg1thx" path="res://addons/godot-xr-tools/hands/animations/right/Grip Shaft.res" id="11_tjhd1"]
[ext_resource type="Animation" uid="uid://do01jton6rk42" path="res://addons/godot-xr-tools/hands/animations/right/Cup.res" id="12_5fxrt"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ahad8"]
points = PackedVector3Array(-0.0512683, 0.351387, -0.00665443, -0.0442057, 0.10465, -0.00678212, 0.0320936, 0.409722, 0.0433524, 0.0351563, 0.0947122, -0.0252461, -0.0262587, 0.109644, 0.0350134, -0.0262587, 0.409722, -0.0483492, -0.0345822, 0.409722, 0.0433524, 0.0237603, 0.109644, 0.0350134, 0.0320936, 0.409722, -0.0483492, 0.0487698, 0.418092, 0.0100055, -0.0262587, 0.109644, -0.0316713, 0.0422266, 0.102624, 0.0105455, 0.0487698, 0.351387, -0.0149934, -0.0512683, 0.409722, 0.0100055, 0.0320936, 0.359693, -0.0483492, -0.00899445, 0.423475, 0.0091369, -0.0262587, 0.351387, -0.0483492, -0.0512683, 0.409722, -0.0149934, 0.0320936, 0.351387, 0.0433524, 0.0487698, 0.351387, 0.0183355, 0.0237603, 0.109644, -0.0316713, -0.0512683, 0.351387, 0.0100055, -0.0345822, 0.351387, 0.0433524, -0.0345822, 0.351387, -0.0400103, -0.0435079, 0.107372, 0.0017248, -0.0345822, 0.418092, -0.0316713, 0.0404268, 0.418092, -0.0233323, -0.0345822, 0.418092, 0.0350134, 0.0417073, 0.10465, -0.00678212, 0.0487698, 0.409722, -0.0149934, -0.0512683, 0.359693, -0.0149934, 0.0320936, 0.109644, 0.0266745)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_iq8hi"]
points = PackedVector3Array(-0.0471, -0.0442119, -0.0900317, 0.0450159, 0.0555556, 0.0942, 0.0443447, 0.0624156, 0.0852527, 0.0454961, -0.0451805, -0.0918208, -0.0262587, 0.109644, -0.0316631, -0.0471, -0.0442119, 0.0933714, 0.0443807, -0.0896242, 0.00924504, 0.0433578, 0.0611823, -0.0875442, -0.0468431, 0.0624156, 0.0852527, -0.0458562, 0.0611823, -0.0875442, -0.0458588, -0.0874986, -0.0131942, 0.0446637, -0.0442791, 0.0934956, 0.0237603, 0.109644, 0.0349832, 0.0446084, 0.100975, -0.0136101, -0.0463166, 0.0993286, 0.0166688, -0.0468791, -0.0896242, 0.00924504, -0.0262587, 0.109644, 0.0349832, 0.0237603, 0.109644, -0.0316631, -0.0471, 0.0551068, 0.0933714, 0.0433604, -0.0874986, -0.0131942, -0.0471, 0.100961, -0.0136078, 0.0438182, 0.0993286, 0.0166688, -0.0463842, -0.0509659, -0.0810717, -0.0455804, -0.0499614, 0.0829379)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bayjb"]
radius = 0.4

[sub_resource type="SphereMesh" id="SphereMesh_h6ctf"]
radius = 0.04
height = 0.08

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_avcy4"]
albedo_color = Color(1.56425e-07, 0, 0.19701, 1)

[sub_resource type="Resource" id="Resource_duae1"]
script = ExtResource("9_ex07i")
closed_pose = ExtResource("8_38xpb")
metadata/_custom_type_script = "uid://45f7hqo2rphl"

[sub_resource type="Resource" id="Resource_fvbde"]
script = ExtResource("9_ex07i")
closed_pose = ExtResource("10_ic72q")
metadata/_custom_type_script = "uid://45f7hqo2rphl"

[sub_resource type="Resource" id="Resource_aee0r"]
script = ExtResource("9_ex07i")
closed_pose = ExtResource("11_tjhd1")
metadata/_custom_type_script = "uid://45f7hqo2rphl"

[sub_resource type="Resource" id="Resource_04dgk"]
script = ExtResource("9_ex07i")
closed_pose = ExtResource("12_5fxrt")
metadata/_custom_type_script = "uid://45f7hqo2rphl"

[node name="ThrowableLever" type="Node3D"]
script = ExtResource("1_hxcdq")

[node name="Lever" type="RigidBody3D" parent="."]
collision_layer = 4
collision_mask = 196615
freeze_mode = 1
script = ExtResource("2_6r5ig")
metadata/_custom_type_script = "uid://ipgq1xtt6inr"

[node name="LeverMesh" type="MeshInstance3D" parent="Lever"]
transform = Transform3D(1.14641e-15, 2.62268e-08, -0.6, 0.6, -2.62268e-08, 0, -2.62268e-08, -0.6, -2.62268e-08, 0, 0, 0)
mesh = ExtResource("3_ykovv")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Lever"]
transform = Transform3D(1.14641e-15, 2.62268e-08, -0.6, 0.6, -2.62268e-08, 0, -2.62268e-08, -0.6, -2.62268e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_ahad8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lever"]
transform = Transform3D(1.14641e-15, 2.62268e-08, -0.6, 0.6, -2.62268e-08, 0, -2.62268e-08, -0.6, -2.62268e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_iq8hi")

[node name="Highlight" type="Node3D" parent="Lever"]
script = ExtResource("5_fc0km")
metadata/_custom_type_script = "uid://bv2d1r7ven1av"

[node name="HighlightArea" type="Area3D" parent="Lever/Highlight"]
visible = false

[node name="HighlightCollisionShape" type="CollisionShape3D" parent="Lever/Highlight/HighlightArea"]
transform = Transform3D(0.187982, 0, 0, 0, -8.21695e-09, 0.187982, 0, -0.187982, -8.21695e-09, 0, 0, -0.101999)
shape = SubResource("CapsuleShape3D_bayjb")

[node name="HighlightMesh" type="MeshInstance3D" parent="Lever/Highlight/HighlightArea"]
transform = Transform3D(1.78814e-08, 2.62268e-08, -0.6, 0.6, -2.62268e-08, 1.78814e-08, -2.62268e-08, -0.6, -2.62268e-08, 0.00132884, 0.000591278, 0.000793338)
mesh = ExtResource("3_ykovv")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_odcf6")

[node name="Ball" type="MeshInstance3D" parent="Lever"]
visible = false
mesh = SubResource("SphereMesh_h6ctf")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_avcy4")

[node name="LeftGrabPointShaft" type="Marker3D" parent="Lever"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.00467928, 0.0566656, -0.150694)
gizmo_extents = 0.12
script = ExtResource("7_bv76e")
hand_pose = SubResource("Resource_duae1")
metadata/_custom_type_script = "uid://0jp0ir4lmpvc"

[node name="LeftGrabPointTip" type="Marker3D" parent="Lever"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0397386, -0.0121557, -0.228524)
gizmo_extents = 0.12
script = ExtResource("7_bv76e")
hand_pose = SubResource("Resource_fvbde")
metadata/_custom_type_script = "uid://0jp0ir4lmpvc"

[node name="RightGrabPointShaft" type="Marker3D" parent="Lever"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.00107425, 0.0660332, -0.119719)
gizmo_extents = 0.12
script = ExtResource("7_bv76e")
hand = 1
hand_pose = SubResource("Resource_aee0r")
metadata/_custom_type_script = "uid://0jp0ir4lmpvc"

[node name="RightGrabPointTip" type="Marker3D" parent="Lever"]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 0.0670291, 0, -0.259693)
gizmo_extents = 0.12
script = ExtResource("7_bv76e")
hand = 1
hand_pose = SubResource("Resource_04dgk")
metadata/_custom_type_script = "uid://0jp0ir4lmpvc"

[connection signal="body_entered" from="Lever/Highlight/HighlightArea" to="." method="_on_higlight_area_body_entered"]
[connection signal="body_exited" from="Lever/Highlight/HighlightArea" to="." method="_on_higlight_area_body_exited"]
